; ModuleID = '/home/carl/AnghaBench/darwin-xnu/tests/extr_backtracing.c_backtrace_thread.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/tests/extr_backtracing.c_backtrace_thread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@USER_FRAMES = common dso_local global i32 0, align 4
@NON_RECURSE_FRAMES = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [63 x i8] c"backtrace thread calling into %d frames (already at %d frames)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @backtrace_thread to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @backtrace_thread(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %4 = load i32, i32* @USER_FRAMES, align 4
  %5 = load i32, i32* @NON_RECURSE_FRAMES, align 4
  %6 = sub i32 %4, %5
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* @NON_RECURSE_FRAMES, align 4
  %9 = call i32 @T_LOG(i8* getelementptr inbounds ([63 x i8], [63 x i8]* @.str, i64 0, i64 0), i32 %7, i32 %8)
  %10 = load i32, i32* %3, align 4
  %11 = call i32 @recurse_a(i32 %10)
  ret i8* null
}

declare dso_local i32 @T_LOG(i8*, i32, i32) #1

declare dso_local i32 @recurse_a(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
